# HsProving

./: HsProving.cabal
TestProving/: Main.hs  PropositionTests.hs
examples/: Main.hs
src/Proving/: Clauses.hs  Propositions.hs
src/Proving/Propositions/: Shorthand.hs
