cabal-version:      2.4
name:               Proving
version:            0.1.0.0

synopsis:           Proving stuff

license:            MIT
author:             Ofsouzap
maintainer:         ofsouzap@gmail.com

library
    exposed-modules:  Proving.Propositions
    ghc-options:      -Wall
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable Examples
    main-is:          Main.hs
    ghc-options:      -Wall
    build-depends:    base ^>=4.16.4.0,
                      Proving
    hs-source-dirs:   examples
    default-language: Haskell2010
